Still on Andy's comments

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -213,33 +213,28 @@ VTUF-3D is constructed using the TUF-3D model, as described in \cite{Krayenhoff2
 % } 
  \caption{Integration of the tree model MAESPA into VTUF-3D radiation fluxes routines, in which tiled instances of MAESPA vegetation (in green) are used to calculate radiation transmission for VTUF-3D placeholder vegetation structures (in grey)\label{fig:TUFWithMaespaVegRadiation}.}\end{figure}
 
-The second major change required is including the physiological processes of vegetation and soil in the model. Using a novel approach, MAESPA tiles replace VTUF-3D ground surfaces with vegetated MAESPA surfaces and use results of MAESPA's photosynthesis and water balance routines to modify VTUF-3D's energy balance calculations. The vegetation is treated as a flat two dimensional ground surface tile for the surface energy balances. However, each embedded MAESPA surface actually models a full 3 dimensional tree (along with associated soil and vertical movement of water) and feeds results back to VTUF-3D ground surface energy balances (Figure \ref{fig:TUFWithMaespaInsert}). Each grid cell is assumed to hold a single item of vegetation but can theoretically hold multiple items, as supported by MAESPA. In addition, VTUF-3D allows tree canopies to extend into neighbouring grid squares (overhanging whatever surface is contained in it) so can handle any grid resolution and properly model tree canopies which exceed the grid size.  
+The second major change required is including the physiological processes of vegetation and soil in the model. Using a novel approach, MAESPA tiles replace VTUF-3D ground surfaces with vegetated MAESPA surfaces and use results of MAESPA's photosynthesis and water balance routines to modify VTUF-3D's energy balance calculations. The vegetation is treated as a flat two dimensional ground surface tile for the surface energy balances. However, each embedded MAESPA surface actually models a full 3 dimensional tree (along with associated soil and vertical movement of water) and feeds results back to VTUF-3D ground surface energy balances (Figure \ref{fig:TUFWithMaespaInsert}). Each grid cell is assumed to hold a single item of vegetation but can theoretically hold multiple items, as supported by MAESPA. In addition, VTUF-3D allows tree canopies to extend into neighbouring grid squares (overhanging the ground, wall, and roof surfaces contained in them and casting shade) so can handle any grid resolution and properly model canopies containing individual trees that exceed the grid size.  
 
 \begin{figure}[!htbp]
  \includegraphics[trim = 0mm 14mm 22mm 0.0mm, clip, scale=0.25]{images/TUFWithMaespaInsert.png}
- \caption{\label{fig:TUFWithMaespaInsert} In VTUF-3D energy balance modelling, ground surfaces can contain either regular TUF-3D surfaces or a surface containing MAESPA modelled vegetation. All surfaces will calculate energy balances at the conclusion of each timestep, partitioning available energy into radiative and storage fluxes. Those surfaces with vegetation will also account for vegetation physiological processes when performing energy balances.}
+ \caption{\label{fig:TUFWithMaespaInsert} In VTUF-3D energy balance modelling, ground surfaces can contain either regular TUF-3D surfaces or a surface containing MAESPA modelled vegetation. All surfaces will calculate energy balances at the conclusion of each timestep, partitioning available energy into radiative, sensible, latent, and storage fluxes. Those surfaces with vegetation will also account for vegetation physiological processes when performing energy balances.}
 \end{figure}
 
-At the conclusion of each timestep (default of 30 minutes but duration is user configured), VTUF-3D calculates the energy balance of each surface. Incoming radiation energy and existing stored energy are partitioned into new values of stored and radiated energy. A variable for latent energy has been added to the model and energy is allocated to it from the pool of available energy. Tiles of MAESPA instances (with an individual tree or other types of vegetation in each) are used for surfaces that have vegetation (Figure \ref{fig:TUFWithMaespaInsert}). These instances provide values of radiation transmission, energy fluxes, and soil water storage for each item of vegetation in the domain using their unique properties and characteristics. If a surface does not contain vegetation, VTUF-3D runs TUF-3D's normal energy balance calculations.
-
-
+At the conclusion of each timestep (default of 30 minutes but duration is user configured), VTUF-3D calculates the energy balance of each surface. Tiles of MAESPA instances (with an individual tree or other types of vegetation in each) are used for surfaces that have vegetation (Figure \ref{fig:TUFWithMaespaInsert}). These instances provide values of radiation transmission, energy fluxes (including latent energy, not previously accounted for in TUF-3D), and soil water storage for each item of vegetation in the domain using their unique properties and characteristics. If a surface does not contain vegetation, VTUF-3D runs TUF-3D's normal energy balance calculations.
 
 \subsection{Radiative transfer}\label{sec:radiativetransfer}
 
-In order to track the movement and allocation of radiation, VTUF-3D’s modelling domain is built up in 3-D using cubes and their surfaces (facets). To determine which surfaces can 'see' each other (unobstructed by other surfaces), ray tracing eliminates pairs of surfaces which will not need to be considered during simulations. Ray tracing also determines sunlit and shaded patterns on the 3D urban surfaces throughout a simulation using a modified version of the \cite{Soux2004} algorithm. Reflections and absorption of longwave and shortwave radiation are modelled using a radiosity approach (radiative reflection and emission treated as perfectly diffuse). These radiative transfer calculations are unchanged from the original TUF-3D scheme and are detailed in \cite{Krayenhoff2007}.
+In order to track the movement and allocation of radiation, VTUF-3D’s modelling domain is built up in 3D using cubes and their surfaces (facets). To determine which surfaces can `see' each other (unobstructed by other surfaces), ray tracing eliminates pairs of surfaces which will not need to be considered during simulations. Ray tracing also determines sunlit and shaded patterns on the 3D urban surfaces throughout a simulation using a modified version of the \cite{Soux2004} algorithm. Reflections and absorption of longwave and shortwave radiation are modelled using a radiosity approach (radiative reflection and emission treated as perfectly diffuse). These radiative transfer calculations are unchanged from the original TUF-3D scheme and are detailed in \cite{Krayenhoff2007}.
 
-For vegetated parts of the domain, radiative transfer is calculated by components from MAESPA. Incoming radiation, both photosynthetic radiation (PAR) and near infrared (NIR) is partitioned into direct and diffuse using \cite{Weiss1985}. Canopy structure is calculated based on \cite{Wang1990}, supporting a variety of crown shapes namely: conical, half-ellipsoidal, ellipsoidal and paraboloidal. Absorption and scattering of radiation (PAR, NIR, and thermal radiation) by the canopy is calculated using \cite{Norman1979}. Full details of these calculations are included in \cite{Duursma2012}. VTUF-3D distributes the transmitted and absorbed quantities (as detailed in Section \ref{sec:Representationofvegetation}), however scattered quantities are currently disregarded by VTUF-3D.
+For vegetated parts of the domain, radiative transfer is calculated by components from MAESPA. Incoming radiation, both photosynthetic radiation (PAR) and near infrared (NIR) is partitioned into direct and diffuse using \cite{Weiss1985}. Canopy structure is calculated based on \cite{Wang1990}, supporting a variety of crown shapes namely: conical, half-ellipsoidal, ellipsoidal and paraboloidal. Absorption and scattering of radiation (PAR, NIR, and thermal radiation) by the canopy is calculated using \cite{Norman1979}. Full details of these calculations are included in \cite{Duursma2012}. VTUF-3D accounts for the transmitted and absorbed quantities (as detailed in Section \ref{sec:Representationofvegetation}), however scattered quantities are currently disregarded by VTUF-3D.
 
-Calculation of net radiation ($Q^{*}_{veg}$) for vegetated grid squares replaces the TUF-3D calculated $T_{sfc}$ with MAESPA calculated vegetation surface temperatures ($T_{sfc,veg}$) in 
+In the calculation of net radiation ($Q^{*}_{veg}$) for vegetated grid squares, the TUF-3D calculated $T_{sfc}$ is replaced by MAESPA calculated vegetation surface temperatures ($T_{sfc,veg}$) 
 
 \begin{equation}\label{eq:rnet}
 Q^{*}_{veg} = K\downarrow - (\alpha _{veg} K\downarrow) + \epsilon _{veg} L\downarrow - \epsilon _{veg} \sigma  (T_{sfc,veg}) ^{4} 
 \end{equation}
 
 where $K\downarrow$ is the downward shortwave radiative flux density (W m$^{-2}$), $L\downarrow$ is the downward longwave radiative flux density (W m$^{-2}$), $\alpha _{veg}$ of vegetation is set to 0.20 and $\epsilon _{veg}$ of vegetation set to 0.97 \citep[p. 12]{Oke1987z}, $\sigma$ is the Stefan-Boltzmann constant (=5.67 $\times$ 10$^{-8}$ W m$^{-2}$ K$^{-4}$), and $T_{sfc,veg}$ is the vegetation surface temperature (K).
-
-
-
 
 \subsection{Convective energy fluxes}
 
@@ -258,7 +253,7 @@ VTUF-3D combines MAESPA predicted canopy transpiration and soil evaporation valu
   Q_{E,et} = et \times A _{mm} \times m_{mol,w} \times \Delta H_{vap} \times c_{w,kj} \times Time  
 \end{equation} 
  
-where $et$ is evapotranspiration (mm), $A _{mm}$ is the 2-dimensional tree area (mm$^{2}$), $Time$ is the time (seconds), $\Delta H_{vap}$, the enthalpy of evaporation (=42809 J mol$^{-1}$), $c_{w,kj}$, the conversion to watts (=1W/1000KJ/sec), and $m_{mol,w}$, the molar mass of water (=18.0152g mol$^{-1}$). The conversion is performed three more times for the remaining variables.
+where $et$ is evapotranspiration (mm), $A _{mm}$ is the 2-dimensional tree area in mm (mm$^{2}$), $Time$ is the time (seconds), $\Delta H_{vap}$, the enthalpy of evaporation (=42809 J mol$^{-1}$), $c_{w,kj}$, the conversion to watts (=1W/1000KJ/sec), and $m_{mol,w}$, the molar mass of water (=18.0152g mol$^{-1}$). The conversion is performed three more times for the remaining variables.
 
 These values are combined to calculate the total $Q_{E,veg}$ for a grid square in 
 
@@ -310,6 +305,7 @@ A\epsilon_{g}\sigma T_{g}^{4} &= \frac{A}{2} \epsilon_{g}\sigma( \epsilon_{a} T_
 
 where $A$, is the surface area of a sphere with diameter D of value 0.15m,
 $\epsilon_{a}$, the longwave emissivity of the atmosphere, 
+$\epsilon_{sfc}$, the longwave emissivity of the surface, 
 $\epsilon_{g}$, the globe emissivity (of value 0.95), 
 $h$, the convective heat transfer coefficient (W m$^{-2}$ K$^{-1}$) (see Equation (\ref{eq:h})), 
 $T_{a}$, the dry bulb air temperature (K) (using $T_{can}$), 
@@ -354,7 +350,7 @@ Using $T_{g}$, calculated in Equation (\ref{eq:tg2}), the second step in calcula
 
 
 
-Finally, the Universal Thermal Climate Index (UTCI) (\SI{}{\degreeCelsius}) for each surface is calculated using the \cite{Brode2009u} UTCI formula, generating UTCI values for each surface, allowing human thermal comfort to be examined in detail across a modelled domain. The calculation uses modelled outputs of air temperature, wind speed (using model calculated wind speed at road level), relative humidity (from the forcing data), and $T_{mrt}$ (calculated above). VTUF-3D does not currently calculate a canopy level relative humidity. This is a current limitation and a future enhancement for the model. But as will be shown in the evaluation of VTUF-3D focussing on urban canopy layer air temperature, $T_{mrt}$, and UTCI predictions (Section \ref{sec:CoMValidations}) and in the energy flux evaluation (Section \ref{sec:PrestonValidation}), the model still performs well despite this limitation. 
+Finally, the Universal Thermal Climate Index (UTCI) (\SI{}{\degreeCelsius}) for each surface is calculated using the \cite{Brode2009u} UTCI formula, generating UTCI values for each surface, allowing human thermal comfort to be examined in detail across a modelled domain. The calculation uses modelled outputs of air temperature, wind speed (using model calculated wind speed at canyon level), relative humidity (from the forcing data), and $T_{mrt}$ (calculated above). VTUF-3D does not currently calculate a canopy level relative humidity. This is a current limitation and a future enhancement for the model. But as will be shown in the evaluation of VTUF-3D focussing on urban canopy layer air temperature, $T_{mrt}$, and UTCI predictions (Section \ref{sec:CoMValidations}) and in the energy flux evaluation (Section \ref{sec:PrestonValidation}), the model still performs well despite this limitation. 
 
 %This UTCI formula was designed to provide human thermal comfort assessments using thermal environment parameters with fixed values (incorporated into the formula) for metabolic rates and clothing levels \citep{Brode2012a}. While future development is needed to provide wider flexibility to vary metabolic rates and clothing levels, existing versions of this formula were developed to embody equivalent human physiological responses to differing thermal parameters \citep{Havenith2012,Fiala2012}.
 
@@ -392,7 +388,7 @@ The domain initialisation ray tracing routines of TUF-3D have not been modified.
 
 After model improvements to VTUF-3D were made, a similar parallel logic was created to represent the vegetation in the domain. These vegetation elements are ignored in the initial ray-tracing (Figure \ref{fig:initray}a). This initial ray tracing is performed to optimise the modelling, to exclude any two surfaces which will never be visible to each other. However, depending on the density of the vegetation, the pathway between two surfaces might not be completely obscured by vegetation so these cases will have to be evaluated during the simulation run.
 
-At each timestep during the simulation, VTUF-3D now runs a modified shading routine (Figure \ref{fig:modshading}c). During the model iteration through each surface in the domain, ray-traces towards the sun are done as described previously (the TUF-3D default method). However, each step of the ray trace checks to see if vegetation has been encountered, and if encountered, sets a flag to indicate further processing will be needed. Then the ray trace continues and concludes when it either passes out of the domain or is blocked by a building. If no vegetation is encountered, radiation exchanges between surfaces along the ray default to the normal TUF-3D method. Otherwise additional processing needs to be done to account for the radiation exchanges affected by vegetation.
+At each timestep during the simulation, VTUF-3D now runs a modified shading routine (Figure \ref{fig:modshading}c). During the model iteration through each surface in the domain, ray-traces towards the sun are done as described previously (the TUF-3D default method). However, each step of the ray trace checks to see if vegetation has been encountered, and if encountered, sets a flag to indicate further processing will be needed. Then the ray trace continues and concludes when it either passes out of the domain or is blocked by a building. If no vegetation is encountered, radiation exchanges between surfaces along the ray default to the original TUF-3D method. Otherwise additional processing needs to be done to account for the radiation exchanges affected by vegetation.
 
 To resolve the sunlit factor for surfaces that encountered vegetation during the ray trace, reverse ray tracing is done for those beams (Figure \ref{fig:modshadingreverse}d). For surfaces 5 and 6 in Figure \ref{fig:modshadingreverse}d, ray tracing is done from the top of the domain back along the radiation path. When the ray encounters vegetation (surfaces 5 and 6), VTUF-3D looks up the tree associated with the ground surface below and loads the offline calculations of the amount of radiation reflected, absorbed, and transmitted through the vegetation. The ray tracing continues, allocating the remaining radiation either to further intercepting vegetation or ultimately to the final ground or building surface.
 
@@ -445,7 +441,7 @@ $W:P$, mean wall-to-plan ratio &0.4  \\ \hline
 \end{tabular}
 \end{table}
 
-The 2015 imagery used here for the model domain was 13 years after the 2002 imagery used in \cite{Coutts2007}. In a remote sensing study by \cite{Nury2015} examining urban greenery and heat mitigation, a land cover classification of the Darebin Council area (55.6 km$^{2}$) (which includes Preston) was performed using aerial imagery from 2009 and LIDAR data from 2008. This land surface classification was much improved in terms of accuracy (due to higher quality and higher resolution imagery) than that of \cite{Coutts2007} and provided a more recent set of land surface data (Table \ref{tab:expertValues}). Some differences in the classification were seen, with the \cite{Nury2015} classification showing a lower building fraction and a higher impervious surfaces. Further, some reduction in vegetation cover is seen between the \cite{Coutts2007} classification and the \cite{Nury2015} classification. This introduces a small amount of uncertainty in the exact make-up of the modelling domain and could explain some of the low predictions of Q$_{E}$ seen later in this evaluation. While the \cite{Nury2015} dataset is at a different scale and from a later time period, it does show very good agreement with the total impervious/pervious fraction of the 500m classification.
+The 2015 imagery used here for the model domain was 13 years after the 2002 imagery used in \cite{Coutts2007}. In a remote sensing study by \cite{Nury2015} examining urban greenery and heat mitigation, a land cover classification of the Darebin Council area (55.6 km$^{2}$) (which includes Preston) was performed using aerial imagery from 2009 and LIDAR data from 2008. This land surface classification was much improved in terms of accuracy (due to higher quality and higher resolution imagery) than that of \cite{Coutts2007} and provided a more recent set of land surface data (Table \ref{tab:expertValues}). Some differences in the classification were seen, with the \cite{Nury2015} classification showing a lower building fraction and a higher impervious surfaces. Further, some reduction in vegetation cover is seen between the \cite{Coutts2007} classification and the \cite{Nury2015} classification. This introduces a small amount of uncertainty in the exact make-up of the modelling domain and could explain some of the low predictions of Q$_{E}$ seen later in this evaluation. While the \cite{Nury2015} dataset was generated from different resolution imagery and from a later time period, it does show very good agreement with the total impervious/pervious fraction of the 500m classification.
 
 
 Model parameters were set to the values given in Table \ref{tab:modprvalpara} and domain parameter values in Table \ref{tab:expertValues}. Most of these values are TUF-3D default values, from \cite{Krayenhoff2007}. The modelled domain is a digitisation of the AOI, Oakhill Ave. in Preston (Figure \ref{fig:PrestonModArea}) with building locations and heights as shown in Figure \ref{fig:PrestonBldHt}.
@@ -473,7 +469,7 @@ Constant building internal floor temperature (\SI{}{\degreeCelsius})  & 15.0  & 
 \caption{Preston evaluation domain configured building heights (0, 5, 10m) and locations for modelling scenario Pr04Val.\label{fig:PrestonBldHt}}      
 \end{figure}
 
-Vegetation (trees, shrubs, and ground cover) is added to VTUF-3D by populating physiological and physical parameters values (using observed or literature values) in configuration files. This means any species or type of vegetation can be included in VTUF-3D. Two tree types were employed in this evaluation, namely \textit{Olea europaea} (Olive) and \textit{Lophostemon Confertus} (Queensland brushbox), as well as turf grass, \textit{Festuca arundinacea} (Tall Fescue). The detailed parameterisations for these vegetation types are shown in \ref{sec:maespavegpara}. A mix of 25\%/75\% \textit{Olea europaea} and \textit{Lophostemon Confertus}) trees were used in the model. Identifying and parametrising every tree species in the domain can be time consuming, so our parametrisations were limited here to these species. The species mix was chosen to best account for density of canopy cover in the aerial imagery but given this limitation, will not completely reflect the observed species mix and might create some modelling errors from the observed fluxes. However, the two available species are representative of commonly planted trees in Melbourne. A street tree inventory by \cite{Frank2006} finds that \textit{Lophostemon Confertus}, a native evergreen, is the most common street tree, representing 6.9\% of street trees in Melbourne. Olive trees are considered suitable for Melbourne's climate conditions (drought tolerant evergreen) and a recommended species for council street tree planting \citep{PortPhillip2010}.
+Vegetation (trees, shrubs, and ground cover) is added to VTUF-3D by populating physiological and physical parameter values (using observed or literature values) in configuration files. This means any species or type of vegetation can be included in VTUF-3D. Two tree types were employed in this evaluation, namely \textit{Olea europaea} (Olive) and \textit{Lophostemon Confertus} (Queensland brushbox), as well as turf grass, \textit{Festuca arundinacea} (Tall Fescue). The detailed parameterisations for these vegetation types are shown in \ref{sec:maespavegpara}. A mix of 25\%/75\% \textit{Olea europaea} and \textit{Lophostemon Confertus}) trees were used in the model. Identifying and parametrising every tree species in the domain can be time consuming, so our parametrisations were limited here to these species. The species mix was chosen to best account for density of canopy cover in the aerial imagery but given this limitation, will not completely reflect the observed species mix and might create some modelling errors from the observed fluxes. However, the two available species are representative of commonly planted trees in Melbourne. A street tree inventory by \cite{Frank2006} finds that \textit{Lophostemon Confertus}, a native evergreen, is the most common street tree, representing 6.9\% of street trees in Melbourne. Olive trees are considered suitable for Melbourne's climate conditions (drought tolerant evergreen) and a recommended species for council street tree planting \citep{PortPhillip2010}.
 
 The evaluation simulation (which is named Pr04Val) was run for 30 days, from 10 February 2004 to 10 March 2004, forced by the observations from \cite{Coutts2007} for those days. Meteorological forcing included $K\downarrow$, $L\downarrow$, air temperature, wind speed, wind direction, and air pressure at a height of 40m. Forcing data for the vegetation components use shortwave values of mean global and mean diffuse observations taken from one minute solar observations (station 086282, Melbourne Airport) \citep{BOM2016}. For full radiation vegetation runs, the mean global irradiance was used while for diffuse runs, the mean diffuse irradiance was used. In addition, the MAESPA FBEAM variable (fraction of incident PAR which is direct-beam) is set to 0.0 in the forcing data for diffuse runs.
 
@@ -481,7 +477,7 @@ The evaluation period contained a range of conditions. The period especially fea
 
 \subsubsection{Evaluation approach}\label{sec:prvalresults}
 
-The evaluation scenario (named Pr04Val) compares the modelled results for the 30 day run with the observed fluxes ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$) for the domain that aligns well with the land surface classification for the wider local scale area (Table \ref{tab:expertValues}). Comparisons with the observations will be performed using the \cite{Willmott1981} d index of agreement. In addition, the VTUF-3D model was run with a `no vegetation scenario', undertaken to demonstrate the significant improvement of the model. This scenario (named Pr04NoVeg), will represent an unimproved TUF-3D without vegetation modelling capability, as the lack of vegetation will not trigger any of the new logic and improvements added to the model. Finally, as the observations used in this evaluation are the same as in Phase 4 of the Intercomparison project \citep{Best2012}, using the \cite{Coutts2007} Preston dataset, the performance of the VTUF-3D model can also be placed within the intercomparison evaluation of urban land surface modelling schemes. These schemes include the 24 surface energy balance models with sufficient resolution to resolve features of and interactions in urban areas. The Intercomparison Phase 4 provides mean bias error (MBE) and root-mean-square error (RMSE) statistics for fluxes $Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$, grouped by three classifications of urban models. These three categories are of models that do not consider vegetation, those that model vegetation using tiles, and models that integrate vegetation into the urban area (referred to as classifications IntercomparisonNoVeg, IntercomparisonTiled, and IntercomparisonIntegrated, described in Table \ref{tab:simscompared}). The tiled approach calculates vegetation and urban surfaces separately and the two surface types only interact through their combined influence on variables such as temperatures. As most the complex scheme, the integrated approach allows interactions between and influences of on each other of the two elements within a timestep. VTUF-3D aligns most closely with a tiled vegetation approach. Table \ref{tab:simscompared} summarises all the different scenarios compared during this study's evaluation process.
+The evaluation scenario (named Pr04Val) compares the modelled results for the 30 day run with the observed fluxes ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$) for the domain that aligns well with the land surface classification for the wider local scale area (Table \ref{tab:expertValues}). Comparisons with the observations were performed using the \cite{Willmott1981} d index of agreement. In addition, the VTUF-3D model was run with a `no vegetation scenario', undertaken to demonstrate the significant improvement of the model. This scenario (named Pr04NoVeg), represents an unimproved TUF-3D without vegetation modelling capability, as the lack of vegetation will not trigger any of the new logic and improvements added to the model. Finally, as the observations used in this evaluation are the same as in Phase 4 of the Intercomparison project \citep{Best2012}, using the \cite{Coutts2007} Preston dataset, the performance of the VTUF-3D model can also be placed within the intercomparison evaluation of urban land surface modelling schemes. These schemes include the 24 surface energy balance models with sufficient resolution to resolve features of and interactions in urban areas. The Intercomparison Phase 4 provides mean bias error (MBE) and root-mean-square error (RMSE) statistics for fluxes $Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$, grouped by three classifications of urban models. Values of mean absolute error (MAE) were also calculated. These three categories are of models that do not consider vegetation, those that model vegetation using tiles, and models that integrate vegetation into the urban area (referred to as classifications IntercomparisonNoVeg, IntercomparisonTiled, and IntercomparisonIntegrated, described in Table \ref{tab:simscompared}). The tiled approach calculates vegetation and urban surfaces separately and the two surface types only interact through their combined influence on variables such as temperatures. As the most complex scheme, the integrated approach allows interactions and influences between each of the two elements within a timestep. VTUF-3D aligns most closely with a tiled vegetation approach. Table \ref{tab:simscompared} summarises all the different scenarios compared during this study's evaluation process.
 
 \begin{center}
 \begin{table}[!htbp]
