--- a/images/TUFWithMaespaVegRadiation.tex
+++ b/images/TUFWithMaespaVegRadiation.tex
@@ -406,11 +406,11 @@
 \draw[arrows=->,line width=0.6pt] (TheSun.center)++(0.0,0.0) -- ++(-7.0,-7.0)  
 %		node[font=\Large,label={[xshift=-1.7cm, yshift=-0.2cm]$K$}] 
 		{} ;
-\draw[arrows=->,line width=0.6pt] (TheSun.center)++(-7.0,-7.0) -- ++(0.5,0.25) node[font=\Large,label={[xshift=0.5cm, yshift=-0.4cm]\huge$Alb$}] 	{} ;	
+\draw[arrows=->,line width=0.6pt] (TheSun.center)++(-7.0,-7.0) -- ++(0.5,0.25) node[font=\Large,label={[xshift=0.5cm, yshift=-0.4cm]\Large $Alb$}] 	{} ;	
 \draw[arrows=->,line width=0.6pt] (TheSun.center)++(-7.0,-7.0) -- ++(0.25,0.5) node[font=\Large,label={[xshift=0.5cm, yshift=-0.4cm]}] 	{} ;		
 
 
-\draw[arrows=->,line width=0.6pt] (TheSun.center)++(-7.0,-7.0) -- ++(-0.25,-0.5) node[font=\Large,label={[xshift=1.0cm, yshift=-0.4cm]\huge$Abs$}] 	{} ;	
+\draw[arrows=->,line width=0.6pt] (TheSun.center)++(-7.0,-7.0) -- ++(-0.25,-0.5) node[font=\Large,label={[xshift=1.0cm, yshift=-0.4cm]\Large$Abs$}] 	{} ;	
 \draw[arrows=->,line width=0.6pt] (TheSun.center)++(-7.0,-7.0) -- ++(-0.25,0.3) node[font=\Large,label={[xshift=0.5cm, yshift=-0.4cm]}] 	{} ;	
 
 
@@ -424,7 +424,7 @@
 %\draw[red] (-0.90,1.10)  ellipse (.1cm and 0.1cm);	
 
 %transmission
-\draw[arrows=->,line width=0.6pt] (14.5,9.5)  -- ++(-1.0,-0.5) node[font=\Large,label={[xshift=-0.8cm, yshift=-0.0cm]\huge$Trans$}] 	{} ;	
+\draw[arrows=->,line width=0.6pt] (14.5,9.5)  -- ++(-1.0,-0.5) node[font=\Large,label={[xshift=-0.8cm, yshift=-0.0cm]\Large $Trans$}] 	{} ;	
 \draw[arrows=->,line width=0.6pt] ((14.5,9.5) -- ++(-0.5,-1.0) node[font=\Large,label={[xshift=0.5cm, yshift=-0.4cm]}] 	{} ;
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
